[package]
name = "sima-llvm"
version = "0.1.0"
authors = ["reto"]
build = "build.rs"

[dependencies]
either = "1.4.0"
lalrpop-util = "0.14.0"
regex = "0.2.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm3-7", features = ["llvm3-7"]}

[build-dependencies]
lalrpop = "0.14.0"
